--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 SystemRequirements:
-  salmon (0.13.1)
+  salmon (0.13.1),
+  curl
 Imports:
+  curl (>= 3.3)
   
