--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: drugseqr
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Finds CMAP02/L1000 Compounds That Oppose RNA-Seq Gene Expression Signatures.
 Version: 0.1.0
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
@@ -11,8 +11,13 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 SystemRequirements:
-  salmon (0.13.1),
-  curl
+  salmon (0.13.1)
 Imports:
-  curl (>= 3.3)
+  AnnotationHub (>= 2.14.5),
+  curl (>= 3.3),
+  tximport (>= 1.10.1),
+  edgeR (>= 3.24.3),
+  AnnotationDbi (>= 1.44.0),
+  ensembldb (>= 2.6.8),
+  
   
