last commit before scrub packrat (too slow)
Former-commit-id: 8770d9f1faae4b63c7b3c06fe8668c6717d85f2b

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 packrat/lib*/
 .Rproj.user
+.Rhistory
 
 # contains raw IBD FASTQ files for dev purposes
 data-raw/example-data
 
+# salmon indices
 inst/indices
+
+# ensdb annotation
+inst/EnsDb
+packrat/src/
