add saved eset example
Former-commit-id: d652e1d80273877c7e3fe2b16242a36655078880

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 .Rhistory
 
 # contains raw IBD FASTQ files for dev purposes
-data-raw/example-data
+data-raw/example-data/*.fastq.gz
+data-raw/example-data/quants
+
 
 # salmon indices
 inst/indices
