--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,13 +13,14 @@ RoxygenNote: 6.1.1
 SystemRequirements:
   salmon (0.13.1)
 Imports:
-  AnnotationHub (>= 2.14.5),
-  curl (>= 3.3),
-  tximport (>= 1.10.1),
-  edgeR (>= 3.24.3),
-  AnnotationDbi (>= 1.44.0),
-  ensembldb (>= 2.6.8),
-  data.table (>= 1.12.0),
-  Biobase (>= 2.42.0)
+    AnnotationHub (>= 2.14.5),
+    curl (>= 3.3),
+    tximport (>= 1.10.1),
+    edgeR (>= 3.24.3),
+    AnnotationDbi (>= 1.44.0),
+    ensembldb (>= 2.6.8),
+    Biobase (>= 2.42.0)
 Suggests: 
     testthat
+Depends: 
+    data.table (>= 1.12.0)
