make small example data from IBD samples; closes #17
Former-commit-id: 92c5d1d853e0236510a5fa942839567befd4bd53

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 .Rhistory
 
 # contains raw IBD FASTQ files for dev purposes
-data-raw/example-data/*.fastq.gz
-data-raw/example-data/quants
+data-raw/example-data/*
+!generate_examples.R
 
 
 # salmon indices
