generate Rd documentation
Former-commit-id: 633329799b0147132c730a0780eb33e2048ddb65

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(add_norms)
 export(build_ensdb)
 export(build_index)
 export(construct_eset)
+export(detect_paired)
 export(get_ensdb_package)
+export(get_fastq_id1s)
 export(get_tx2gene)
 export(import_quants)
 export(load_seq)
