update docs for #8
Former-commit-id: baa371fdd9d04eee888c760e3a76506d8eb18f1b

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(build_ensdb)
 export(build_index)
 export(construct_eset)
 export(detect_paired)
+export(diff_expr)
 export(get_ensdb_package)
 export(get_fastq_id1s)
 export(get_tx2gene)
