--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # contains raw IBD FASTQ files for dev purposes
 data-raw/example-data/*
 !generate_examples.R
+!mds-sva.R
+!mds-sva.png
 
 
 # salmon indices
