init downloading drug effect size data from AWS S3; closes #10
Former-commit-id: 505ac0269707c891442ad380d08ea72a60bfc907

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,9 @@ data-raw/example-data/*
 # salmon indices
 inst/indices
 
+# drug effect size data (new users dl from s3)
+inst/extdata/cmap_es_ind.rds
+inst/extdata/l1000_es.rds
+
 # ensdb annotation
 inst/EnsDb
