init destructure_title; closes #29
Former-commit-id: b52e9a9cd61dd11489648cb89562e4061fd20476

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(append_pdata)
 export(build_ensdb)
 export(build_index)
 export(construct_eset)
+export(destructure_title)
 export(detect_paired)
 export(diff_expr)
 export(dl_drug_es)
