show correlation plots in explore_results for #6
Unfortunately r2d3 doesn't integrate well with DT.

Resolved by generating sample html of plot with r2d3 then
replacing correlation column with row-specific html.

Various css alterations were required to fit the svg perfectly inside the table cell (borrowed from rnama.com).


Former-commit-id: 27ea7927693b9a553428f0686d78399e333db2ea
Former-commit-id: b13dbfacae9977ec136f18cc85b081f1bd058499

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,13 @@ export(add_norms)
 export(append_pdata)
 export(build_ensdb)
 export(build_index)
+export(calcx)
 export(construct_eset)
 export(destructure_title)
 export(detect_paired)
 export(diff_expr)
 export(dl_drug_es)
+export(explore_results)
 export(get_dprimes)
 export(get_ensdb_package)
 export(get_fastq_id1s)
@@ -18,7 +20,6 @@ export(import_quants)
 export(load_seq)
 export(match_pdata)
 export(query_drugs)
-export(run_drugseqr)
 export(run_salmon)
 export(select_contrast)
 export(select_pairs)
