init collapse results for #38
- shows all correlation points in same svg
- currently sorts by minimum correlation
- currently collapses unique cell line, does, etc

css modifications:
 - only show correlation value on hover (previously was faded before hover)
 - less alpha for points (because many)
 - hover is on point/text container instead of cell

other changes:
 - setup l1000 table only after selecting unless no cmap results (l1000 is big and slow)
 - factor out setting up study table to study_table


Former-commit-id: 8f2ad5e4c43b6c671db4698ec569b25e960ad1fc
Former-commit-id: 30f471f899a8ea5c121c4a0a7a5f6fce3d7b282e
Former-commit-id: 00b4f087434be8c7b19163b1365226808b312661

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,3 +26,6 @@ export(run_salmon)
 export(select_contrast)
 export(select_pairs)
 export(setup_fdata)
+export(study_table)
+export(summarize_compound)
+importFrom(magrittr,"%>%")
