--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ SystemRequirements:
 Imports:
     AnnotationHub (>= 2.14.5),
     curl (>= 3.3),
+    dplyr (>= 0.7.8),
     tximport (>= 1.10.1),
     edgeR (>= 3.24.3),
     AnnotationDbi (>= 1.44.0),
@@ -23,6 +24,7 @@ Imports:
     shiny (>= 1.2.0),
     shinyjs (>= 1.0),
     miniUI (>= 0.1.1.1),
+    magrittr (>= 1.5),
     DT (>= 0.5),
     tibble (>= 2.0.1)
 Suggests: 
