--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(detect_paired)
 export(diff_expr)
 export(dl_drug_es)
 export(explore_results)
+export(get_cors_html)
 export(get_dprimes)
 export(get_ensdb_package)
 export(get_fastq_id1s)
