--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,13 +18,17 @@ Imports:
     dplyr (>= 0.7.8),
     tximport (>= 1.10.1),
     edgeR (>= 3.24.3),
+    factoextra (>= 1.0.5),
+    ggplot2 (>= 3.1.0),
     AnnotationDbi (>= 1.44.0),
     ensembldb (>= 2.6.8),
     Biobase (>= 2.42.0),
     shiny (>= 1.2.0),
     shinyjs (>= 1.0),
-    miniUI (>= 0.1.1.1),
     magrittr (>= 1.5),
+    MASS (>= 7.3.51.1),
+    miniUI (>= 0.1.1.1),
+    plotly (>= 4.8.0),
     DT (>= 0.5),
     tibble (>= 2.0.1)
 Suggests: 
