--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(get_tx2gene)
 export(import_quants)
 export(load_seq)
 export(match_pdata)
+export(plotMDS)
 export(query_drugs)
 export(run_salmon)
 export(select_contrast)
