init script to download Pug-Views for #43, #4
Former-commit-id: c34f95b51827400bf1cca8eeea438f14fe243d24
Former-commit-id: 65d2b5c9ce4f8a502bc0a6b30fb2edb7099f0a0f
Former-commit-id: 9a85cfc65a0c430e701bed8ec354a74f0c30a6ee

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ data-raw/example-data/*
 !mds-sva.R
 !mds-sva.png
 
+# contains PUG-View files from Pubchem
+data-raw/drug_annot/pug_view/views/*
+
 
 # salmon indices
 inst/indices
