init check_gras for #43
Former-commit-id: c9f6cb44aadf1c9ef2200b4a3c81a8e6d0c16689
Former-commit-id: 4e09bc8cae1431109a0116dfc23783dcf243fab9
Former-commit-id: d61d2e7d77f72303bb02447bb6e3456d2c56aa1f

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(append_pdata)
 export(build_ensdb)
 export(build_index)
 export(calcx)
+export(check_gras)
 export(construct_eset)
 export(destructure_title)
 export(detect_paired)
