init getting DrugBank URL for #43
Former-commit-id: 28063cb12f554f7f7b2d8d655bef7ca1e69b5b00
Former-commit-id: 3b9643f4a17928c3de6e257ddd8dc2fda0a40f1d
Former-commit-id: bebda8a76b2fde7fa63c4a467eed8d4f347505bf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(dl_drug_es)
 export(explore_results)
 export(get_cors_html)
 export(get_dprimes)
+export(get_drugbank)
 export(get_ensdb_package)
 export(get_fastq_id1s)
 export(get_tx2gene)
