validate sample pairings for #30
Former-commit-id: 41537c02bda3ee47a2ae0c6998343db3c672d5dc
Former-commit-id: 21d2db90ab7efb493bff6fe93a524983fa1aa288
Former-commit-id: da23b45fe75b515ae5a6c0212c88472afdb2579d

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,4 +34,5 @@ export(select_pairs)
 export(setup_fdata)
 export(study_table)
 export(summarize_compound)
+export(validate_pairs)
 importFrom(magrittr,"%>%")
