validate sample replicates for #30
Former-commit-id: eea8d87dbe23651e9c75d9a354546485d387a25e
Former-commit-id: dd872f2c9974691386e54f82c1428ee17afc6e9d
Former-commit-id: ecef01c43fc2ce73e5e67fcc1b4fe22e680eee68

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,4 +35,5 @@ export(setup_fdata)
 export(study_table)
 export(summarize_compound)
 export(validate_pairs)
+export(validate_reps)
 importFrom(magrittr,"%>%")
