--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ data-raw/example-data/*
 !mds-sva.R
 !mds-sva.png
 
+data-raw/single-cell/example-data/*
+
 # contains PUG-View files from Pubchem
 data-raw/drug_annot/pug_view/views/*
 
