update/init docs
Former-commit-id: 560f3906ee570cd4ebbdf61d54fbb9a8f89e619f
Former-commit-id: 2d1a37a7dc055f1f65e87ecba425c6e1c2204b51
Former-commit-id: cc5b17a973cbaebe3c9a5849a911601fc55302f0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(get_dprimes)
 export(get_drugbank)
 export(get_ensdb_package)
 export(get_fastq_id1s)
+export(get_open_a)
+export(get_top)
 export(get_tx2gene)
 export(import_quants)
 export(load_seq)
