--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,9 @@ export(get_fastq_id1s)
 export(get_open_a)
 export(get_top)
 export(get_tx2gene)
+export(get_wikipedia)
 export(import_quants)
+export(limit_cells)
 export(load_seq)
 export(match_pdata)
 export(merge_linkouts)
