build gencode index for single cell rna-seq for #48
Former-commit-id: c5b01e03a768d23fbde65c8138d20a498a6a0f2e
Former-commit-id: dd1745ff87f971e2e0d79c7a4e490604c9ffff2c
Former-commit-id: d4ff3a51ebd48081088d316d1c554efd66140cd3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,8 @@ export(add_table_html)
 export(append_annot)
 export(append_pdata)
 export(build_ensdb)
-export(build_index)
+export(build_ensdb_index)
+export(build_gencode_index)
 export(calcx)
 export(check_gras)
 export(construct_eset)
