fix tgMap for alevin for #48
Was previously getting 'ERROR: Txp to Gene Map not found for 175775 transcripts' when running alevin

followed instructions from https://gist.github.com/k3yavi/c501705ed2d29b12b0d10cf78b3ed001 (modified in txp2gene/README)
to fix.


Former-commit-id: ee53d7516fba57439acc501b2b7f61e5dc0a4cfa
Former-commit-id: b1b17681fdde1af96f27c84036d2265d5a130f32
Former-commit-id: afb37b1e581d7c4966dbc40a1d14f0982ee36848

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,7 @@ data-raw/single-cell/example-data/*
 # contains PUG-View files from Pubchem
 data-raw/drug_annot/pug_view/views/*
 
-
-# salmon indices
+# salmon/alevin indices
 inst/indices
 
 # drug effect size data (new users dl from s3)
@@ -22,3 +21,6 @@ inst/extdata/l1000_es.rds
 
 # ensdb annotation
 inst/EnsDb
+
+# txp2gene for alevin
+data-raw/single-cell/txp2gene/*.gtf.gz
