init run_alevin for #48
Former-commit-id: 71037d497e397c05291d608e62002a0876a4a407
Former-commit-id: d5ca52820881ad60aae476fd8d8f88df065ee38e
Former-commit-id: 81bcd93bda80872ee0d4db766692bb5f72b59965

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(check_gras)
 export(construct_eset)
 export(destructure_title)
 export(detect_paired)
+export(detect_sc_method)
 export(diff_expr)
 export(dl_drug_es)
 export(explore_results)
@@ -26,6 +27,7 @@ export(get_open_a)
 export(get_top)
 export(get_tx2gene)
 export(get_wikipedia)
+export(identify_sc_files)
 export(import_quants)
 export(limit_cells)
 export(load_seq)
@@ -33,6 +35,7 @@ export(match_pdata)
 export(merge_linkouts)
 export(plotMDS)
 export(query_drugs)
+export(run_alevin)
 export(run_salmon)
 export(select_contrast)
 export(select_pairs)
