init load_scseq; closes #57
Former-commit-id: 78a5a17fb019474752e2e55babd270ef8d63ddaf
Former-commit-id: c7fadec614af28981986f6aeaa5929010a38b159
Former-commit-id: cc191b11686d71496d1bcf03a0d36f49a1eafcc3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(get_wikipedia)
 export(identify_sc_files)
 export(import_quants)
 export(limit_cells)
+export(load_scseq)
 export(load_seq)
 export(match_pdata)
 export(merge_linkouts)
