init norm_scseq; closes #58
Former-commit-id: 4be2b201ba5f748e3f87f465862d7af1d4428e6c
Former-commit-id: 5cbcf8ae88405cc06d62a5e6a863c655a27280bb
Former-commit-id: 2f7bc091491ad0186ed367869392324c18548ce5

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,8 +34,10 @@ export(load_scseq)
 export(load_seq)
 export(match_pdata)
 export(merge_linkouts)
+export(norm_scseq)
 export(plotMDS)
 export(query_drugs)
+export(read.delim1)
 export(run_alevin)
 export(run_salmon)
 export(select_contrast)
