fix ggplot2 namespace issues and add docs
Former-commit-id: 375d088aa7409c095f42043602e99aae5099da09
Former-commit-id: 1ae46a978a97224f70e99cde25fe2b89dd13fac4
Former-commit-id: 495f238f0b678751ecfe7277c566a105eb5a2f46

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,10 @@ export(detect_sc_method)
 export(diff_expr)
 export(dl_drug_es)
 export(explore_results)
+export(geom_hist_whitelist)
+export(geom_tsne)
 export(get_cors_html)
+export(get_diverge)
 export(get_dprimes)
 export(get_drugbank)
 export(get_ensdb_package)
@@ -27,6 +30,7 @@ export(get_open_a)
 export(get_top)
 export(get_tx2gene)
 export(get_wikipedia)
+export(hist_scseq_whitelist)
 export(identify_sc_files)
 export(import_quants)
 export(limit_cells)
@@ -43,8 +47,10 @@ export(run_salmon)
 export(select_contrast)
 export(select_pairs)
 export(setup_fdata)
+export(stabilize_scseq)
 export(study_table)
 export(summarize_compound)
+export(tsne_scseq_whitelist)
 export(validate_pairs)
 export(validate_reps)
 importFrom(magrittr,"%>%")
