complete example anal using celaref for #63
Former-commit-id: 811916def4c272e3de111b7c31c9263bd61aad05
Former-commit-id: 5d3d6303a6cc0d3c269e2675892d053c5fdd4053
Former-commit-id: 641bc8b1d9bf7ec5c4035aa228c475bb238dd5c6

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ data-raw/example-data/*
 !mds-sva.png
 
 data-raw/single-cell/example-data/*
+data-raw/single-cell/example-anals/GSE1133/*
 
 # contains PUG-View files from Pubchem
 data-raw/drug_annot/pug_view/views/*
