annotate BioGPS data for #65
Former-commit-id: 00d84be3eae2ef18aca9ae368d81a899345c3585
Former-commit-id: 82491d6f815c9c2e366d7a55aa7522c88578794d
Former-commit-id: 2a50c5389d0e5699752f0ab3496e70504fc928dc

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ data-raw/example-data/*
 
 data-raw/single-cell/example-data/*
 data-raw/single-cell/example-anals/GSE1133/*
+data-raw/single-cell/biogps/U133AGNF1B.gcrma.avg.csv
 
 # contains PUG-View files from Pubchem
 data-raw/drug_annot/pug_view/views/*
