cleanup code and add dependencies; closes #63
Former-commit-id: bbe4977efc505e24613e79e48608b6eb91e0f2c8
Former-commit-id: 926f77e645a6dc15d4b8e68176c2fe50277a35e1
Former-commit-id: b00585f936e8dcdaf69802289d5557a4128afcde

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(detect_sc_method)
 export(diff_expr)
 export(dl_drug_es)
 export(explore_results)
+export(explore_scseq_clusters)
 export(geom_hist_whitelist)
 export(geom_tsne)
 export(get_cors_html)
@@ -41,6 +42,7 @@ export(match_pdata)
 export(merge_linkouts)
 export(norm_scseq)
 export(plotMDS)
+export(qc_scseq)
 export(query_drugs)
 export(read.delim1)
 export(run_alevin)
