--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,9 @@ Imports:
     Biobase (>= 2.42.0),
     shiny (>= 1.2.0),
     shinyjs (>= 1.0),
+    shinyWidgets (>= 0.4.8),
+    scran (>= 1.12.0),
+    scater (>= 1.12.2),
     magrittr (>= 1.5),
     MASS (>= 7.3.51.1),
     miniUI (>= 0.1.1.1),
