init batch norm example anal for two samples for #62
Required some adaptation so that add_scseq_clusters and explore_scseq_clusters use the batch corrected data.


Former-commit-id: 6b2e2e2f12f5360e0e0810088ac188c6c8974746
Former-commit-id: 3b52fc1b4d397893608025478e88b26445e6ae4e
Former-commit-id: b8c008f63a8ebf41f086e6eeb2740f4b6998c804

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ data-raw/example-data/*
 !mds-sva.R
 !mds-sva.png
 
-data-raw/single-cell/example-data/*
+*.fastq.gz
 data-raw/single-cell/example-anals/GSE1133/*
 data-raw/single-cell/biogps/U133AGNF1B.gcrma.avg.csv
 
