adapt explore_scseq_clusters for Seurat #67
Former-commit-id: a8ff65926874f299c62ba0b190d2f241f50cb6bc
Former-commit-id: 5a3e9c7fe8ad55a0c1dabfcc42e48c76f1ea6504
Former-commit-id: 47b43757092653fc79cdcf9f794986c7dc8ca54a

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(get_drugbank)
 export(get_ensdb_package)
 export(get_fastq_id1s)
 export(get_open_a)
+export(get_scseq_markers)
 export(get_top)
 export(get_tx2gene)
 export(get_wikipedia)
@@ -37,19 +38,23 @@ export(identify_sc_files)
 export(import_quants)
 export(limit_cells)
 export(load_scseq)
+export(load_scseq_qcgenes)
 export(load_seq)
 export(match_pdata)
 export(merge_linkouts)
 export(norm_scseq)
 export(plotMDS)
+export(preprocess_scseq)
 export(qc_scseq)
 export(query_drugs)
 export(read.delim1)
 export(run_alevin)
 export(run_salmon)
+export(run_tsne)
 export(select_contrast)
 export(select_pairs)
 export(setup_fdata)
+export(srt_to_sce)
 export(stabilize_scseq)
 export(study_table)
 export(summarize_compound)
