--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(add_scseq_clusters)
 export(add_table_html)
 export(append_annot)
 export(append_pdata)
+export(as.SingleCellExperiment)
 export(build_ensdb)
 export(build_ensdb_index)
 export(build_gencode_index)
@@ -44,7 +45,9 @@ export(match_pdata)
 export(merge_linkouts)
 export(norm_scseq)
 export(plotMDS)
+export(plot_biogps)
 export(preprocess_scseq)
+export(prevent_integrated)
 export(qc_scseq)
 export(query_drugs)
 export(read.delim1)
