functions to generate PDF of cluster markers to share with others
Former-commit-id: 51d9975a0818fb87cc6818f146a8d4bcbcc60e69
Former-commit-id: 97e78cc976dc4e5471956fafdf52dbe4c9f54f9e
Former-commit-id: 7060fe8677f0159bf0542c4422dcd3a2aae2f6a6

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,14 +46,19 @@ export(merge_linkouts)
 export(norm_scseq)
 export(plotMDS)
 export(plot_biogps)
+export(plot_scseq_report)
+export(plot_tsne_cluster)
+export(plot_tsne_gene)
 export(preprocess_scseq)
 export(prevent_integrated)
 export(qc_scseq)
 export(query_drugs)
 export(read.delim1)
+export(remove_axes)
 export(run_alevin)
 export(run_salmon)
 export(run_tsne)
+export(save_scseq_reports)
 export(select_contrast)
 export(select_pairs)
 export(setup_fdata)
@@ -61,6 +66,7 @@ export(srt_to_sce)
 export(stabilize_scseq)
 export(study_table)
 export(summarize_compound)
+export(theme_dimgray)
 export(tsne_scseq_whitelist)
 export(validate_pairs)
 export(validate_reps)
