init combined report plots and update docs
Former-commit-id: 902e8d4d7538dd0a9db303d00022d367c228d71f
Former-commit-id: 3fac9bbfee9f4e46d5bb59ae59be42c6073bfa5b
Former-commit-id: 25f2f3020b1682bfdda45505e75c262987c9dc87

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(merge_linkouts)
 export(norm_scseq)
 export(plotMDS)
 export(plot_biogps)
+export(plot_combined_scseq_report)
 export(plot_scseq_report)
 export(plot_tsne_cluster)
 export(plot_tsne_gene)
@@ -54,10 +55,10 @@ export(prevent_integrated)
 export(qc_scseq)
 export(query_drugs)
 export(read.delim1)
-export(remove_axes)
 export(run_alevin)
 export(run_salmon)
 export(run_tsne)
+export(save_combined_scseq_reports)
 export(save_scseq_reports)
 export(select_contrast)
 export(select_pairs)
@@ -67,6 +68,8 @@ export(stabilize_scseq)
 export(study_table)
 export(summarize_compound)
 export(theme_dimgray)
+export(theme_no_xaxis)
+export(theme_no_yaxis)
 export(tsne_scseq_whitelist)
 export(validate_pairs)
 export(validate_reps)
