standardize fill colors for combined scseq reports
Former-commit-id: 7a5e29b06d9db314f52101995f8960d221482c6b
Former-commit-id: 8e2a54cde787e4d424b521b43a3b762734a3e206
Former-commit-id: c07f42055001fc4d548ddfa2d7bb8dc8259e34c0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(run_salmon)
 export(run_tsne)
 export(save_combined_scseq_reports)
 export(save_scseq_reports)
+export(scale_fill_names)
 export(select_contrast)
 export(select_pairs)
 export(setup_fdata)
