--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 # contains raw IBD FASTQ files for dev purposes
 data-raw/example-data/*
-data-raw/indices/*
+data-raw/indices*
 !generate_examples.R
 !mds-sva.R
 !mds-sva.png
