minor changes/updates
Former-commit-id: a316e205bf7084ebab73f9a6d2f15acf7a44dbdd
Former-commit-id: 992756ab9dacebcb6259744befe504448e7cf514
Former-commit-id: 31114258fa559fbb272db91530847ffd9820a6b4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(detect_paired)
 export(detect_sc_method)
 export(diff_expr)
 export(dl_drug_es)
+export(exist_clusters)
 export(explore_results)
 export(explore_scseq_clusters)
 export(geom_hist_whitelist)
@@ -30,6 +31,7 @@ export(get_drugbank)
 export(get_ensdb_package)
 export(get_fastq_id1s)
 export(get_open_a)
+export(get_salmon_version)
 export(get_scseq_markers)
 export(get_top)
 export(get_tx2gene)
@@ -37,6 +39,7 @@ export(get_wikipedia)
 export(hist_scseq_whitelist)
 export(identify_sc_files)
 export(import_quants)
+export(integrate_scseq)
 export(limit_cells)
 export(load_scseq)
 export(load_scseq_qcgenes)
@@ -47,11 +50,11 @@ export(norm_scseq)
 export(plotMDS)
 export(plot_biogps)
 export(plot_combined_scseq_report)
+export(plot_scseq_barplot)
 export(plot_scseq_report)
 export(plot_tsne_cluster)
 export(plot_tsne_gene)
 export(preprocess_scseq)
-export(prevent_integrated)
 export(qc_scseq)
 export(query_drugs)
 export(read.delim1)
