init run/read kallisto functions for comparison to alevin
Former-commit-id: 14096b7c124f73f2860e459e6d834303f866e0b1
Former-commit-id: 77cca99e5cb86068565fc96f44efb732794eb57e
Former-commit-id: c2d14878b4309f5c97d354535c0b4f188ac34cbf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,7 +58,9 @@ export(preprocess_scseq)
 export(qc_scseq)
 export(query_drugs)
 export(read.delim1)
+export(read_kallisto)
 export(run_alevin)
+export(run_kallisto)
 export(run_salmon)
 export(run_tsne)
 export(save_combined_scseq_reports)
