init SoupX functions for #76
Former-commit-id: c8fa07b879ec4442bd852be33b1aed713e75d123
Former-commit-id: 62d8066730edb775318a49c3e838fa6d6aef15d7
Former-commit-id: 6d5b7bbbbfe75bb5a24063090f04c7c1f9873a6b

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(get_cors_html)
 export(get_diverge)
 export(get_dprimes)
 export(get_drugbank)
+export(get_empty)
 export(get_ensdb_package)
 export(get_fastq_id1s)
 export(get_open_a)
@@ -71,7 +72,9 @@ export(select_pairs)
 export(setup_fdata)
 export(srt_to_sce)
 export(stabilize_scseq)
+export(strain_scseq)
 export(study_table)
+export(subset_scseq)
 export(summarize_compound)
 export(theme_dimgray)
 export(theme_no_xaxis)
