init readAlevin for salmon alevin 0.14.0 output format #77
Former-commit-id: dc5352f16381fd7ebb5ebc2cb804270bc5972485
Former-commit-id: 82312b93f8594c286b542779af68e7af2b436c6c
Former-commit-id: 231fcc78480a729e181aa1bf181774095dc96020

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,11 +59,13 @@ export(preprocess_scseq)
 export(qc_scseq)
 export(query_drugs)
 export(read.delim1)
+export(readAlevin)
 export(read_kallisto)
 export(run_alevin)
 export(run_kallisto)
 export(run_salmon)
 export(run_tsne)
+export(salmon_lt_0.14.0)
 export(save_combined_scseq_reports)
 export(save_scseq_reports)
 export(scale_fill_names)
