add readers for various alevin 0.14.0 formats
related to https://github.com/COMBINE-lab/salmon/issues/380 and issue #77
also factored load_scseq_counts out of load_scseq


Former-commit-id: 3d1c87272ad7ba61f0cd782b5b3388d844969a77
Former-commit-id: d76834a1c29e338886af840bce013fb42d53fb8f
Former-commit-id: 4a03717ee012f784cea7424a99785b5ba4543fb4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,7 +59,8 @@ export(preprocess_scseq)
 export(qc_scseq)
 export(query_drugs)
 export(read.delim1)
-export(readAlevin)
+export(readAlevin_sparse)
+export(read_alevin_mm)
 export(read_kallisto)
 export(run_alevin)
 export(run_kallisto)
