--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,13 @@ export(add_es)
 export(add_linkout)
 export(add_norms)
 export(add_scseq_clusters)
+export(add_scseq_qc_metrics)
 export(add_table_html)
 export(append_annot)
 export(append_pdata)
 export(as.SingleCellExperiment)
 export(build_ensdb)
-export(build_ensdb_index)
-export(build_gencode_index)
+export(build_kallisto_index)
 export(calcx)
 export(check_gras)
 export(construct_eset)
@@ -18,22 +18,26 @@ export(destructure_title)
 export(detect_paired)
 export(detect_sc_method)
 export(diff_expr)
+export(dl_10x_whitelists)
 export(dl_drug_es)
 export(exist_clusters)
 export(explore_results)
 export(explore_scseq_clusters)
 export(geom_hist_whitelist)
 export(geom_tsne)
+export(get_10x_whitepath)
 export(get_cors_html)
 export(get_diverge)
 export(get_dprimes)
 export(get_drugbank)
-export(get_empty)
 export(get_ensdb_package)
 export(get_fastq_id1s)
+export(get_geo_rnaseq)
+export(get_knee)
 export(get_open_a)
-export(get_salmon_version)
 export(get_scseq_markers)
+export(get_scseq_whitelist)
+export(get_srp_meta)
 export(get_top)
 export(get_tx2gene)
 export(get_wikipedia)
@@ -43,11 +47,13 @@ export(import_quants)
 export(integrate_scseq)
 export(limit_cells)
 export(load_scseq)
+export(load_scseq_counts)
 export(load_scseq_qcgenes)
 export(load_seq)
 export(match_pdata)
 export(merge_linkouts)
 export(norm_scseq)
+export(pick_roryk_cutoff)
 export(plotMDS)
 export(plot_biogps)
 export(plot_combined_scseq_report)
@@ -56,17 +62,11 @@ export(plot_scseq_report)
 export(plot_tsne_cluster)
 export(plot_tsne_gene)
 export(preprocess_scseq)
-export(qc_scseq)
 export(query_drugs)
-export(read.delim1)
-export(readAlevin_sparse)
-export(read_alevin_mm)
-export(read_kallisto)
-export(run_alevin)
-export(run_kallisto)
+export(run_fasterq_dump)
+export(run_kallisto_scseq)
 export(run_salmon)
 export(run_tsne)
-export(salmon_lt_0.14.0)
 export(save_combined_scseq_reports)
 export(save_scseq_reports)
 export(scale_fill_names)
@@ -77,7 +77,6 @@ export(srt_to_sce)
 export(stabilize_scseq)
 export(strain_scseq)
 export(study_table)
-export(subset_scseq)
 export(summarize_compound)
 export(theme_dimgray)
 export(theme_no_xaxis)
