--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ inst/EnsDb
 # txp2gene for alevin
 data-raw/single-cell/alevin-args/*.gz
 data-raw/single-cell/kallisto-args/*
+
+data-raw/single-cell/reference-data/*
