--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,13 +56,13 @@ export(plot_biogps)
 export(plot_combined_scseq_report)
 export(plot_scseq_barplot)
 export(plot_scseq_report)
-export(plot_tsne_cluster)
-export(plot_tsne_gene)
+export(plot_umap_cluster)
+export(plot_umap_gene)
 export(preprocess_scseq)
 export(query_drugs)
 export(run_kallisto_scseq)
 export(run_salmon)
-export(run_tsne)
+export(run_umap)
 export(save_combined_scseq_reports)
 export(save_scseq_reports)
 export(scale_fill_names)
