--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(hist_scseq_whitelist)
 export(identify_sc_files)
 export(import_quants)
 export(integrate_scseq)
+export(jitter_umap)
 export(limit_cells)
 export(load_scseq)
 export(load_scseq_counts)
