reorganize function files
Former-commit-id: e277acdc29880a6adc46e83858649fc31c3e5d15
Former-commit-id: 000e67c6d65800d515e4b5cf5869d52107cbd2b9
Former-commit-id: be40cbaf446e88b8f769a79bd39ca36c2e521d47

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,8 +61,8 @@ export(plot_umap_cluster)
 export(plot_umap_gene)
 export(preprocess_scseq)
 export(query_drugs)
+export(run_kallisto_bulk)
 export(run_kallisto_scseq)
-export(run_salmon)
 export(run_umap)
 export(save_combined_scseq_reports)
 export(save_scseq_reports)
@@ -78,6 +78,7 @@ export(summarize_compound)
 export(theme_dimgray)
 export(theme_no_xaxis)
 export(theme_no_yaxis)
+export(transfer_labels)
 export(tsne_scseq_whitelist)
 export(validate_pairs)
 export(validate_reps)
