--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ data-raw/indices*
 
 *.fastq.gz
 data-raw/single-cell/example-anals/GSE1133/*
+data-raw/single-cell/example-anals/sjia/*
 data-raw/single-cell/biogps/U133AGNF1B.gcrma.avg.csv
 
 # contains PUG-View files from Pubchem
