--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(get_ensdb_package)
 export(get_fastq_id1s)
 export(get_knee)
 export(get_open_a)
+export(get_palette)
 export(get_scseq_markers)
 export(get_scseq_whitelist)
 export(get_top)
@@ -41,7 +42,7 @@ export(get_wikipedia)
 export(hist_scseq_whitelist)
 export(identify_sc_files)
 export(import_quants)
-export(integrate_scseq)
+export(integrate_scseqs)
 export(jitter_umap)
 export(limit_cells)
 export(load_scseq)
