--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(hist_scseq_whitelist)
 export(identify_sc_files)
 export(import_quants)
 export(integrate_scseqs)
+export(is.ambient)
 export(jitter_umap)
 export(limit_cells)
 export(load_scseq)
