add ambient percent and outliers for #76
Former-commit-id: 87602a139aab0c2f97c43ae276ffc89f0266660c
Former-commit-id: df32b1abd57019efe0f1c32bb8c4c664ffe543d7
Former-commit-id: 4e58b6c972d941e1be5b4fe4f13992c55df18f3a

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,9 @@ export(get_ensdb_package)
 export(get_fastq_id1s)
 export(get_knee)
 export(get_open_a)
+export(get_outliers)
 export(get_palette)
+export(get_pct_ambient)
 export(get_scseq_markers)
 export(get_scseq_whitelist)
 export(get_top)
@@ -43,7 +45,6 @@ export(hist_scseq_whitelist)
 export(identify_sc_files)
 export(import_quants)
 export(integrate_scseqs)
-export(is.ambient)
 export(jitter_umap)
 export(limit_cells)
 export(load_scseq)
