run integration and save results for #87
Former-commit-id: 18555787b6e370c50fbff508b360adb9105ba23e
Former-commit-id: 79e5a88328cb57dc6cee511c648da57efd0c7708
Former-commit-id: 36b81ca96c612eb413df6338ce103125a565416d

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(get_wikipedia)
 export(hist_scseq_whitelist)
 export(identify_sc_files)
 export(import_quants)
+export(integrate_saved_scseqs)
 export(integrate_scseqs)
 export(jitter_umap)
 export(limit_cells)
@@ -70,6 +71,7 @@ export(run_umap)
 export(save_combined_scseq_reports)
 export(save_scseq_reports)
 export(scale_fill_names)
+export(scseq_part_path)
 export(select_contrast)
 export(select_pairs)
 export(setup_fdata)
@@ -83,6 +85,7 @@ export(theme_no_xaxis)
 export(theme_no_yaxis)
 export(transfer_labels)
 export(tsne_scseq_whitelist)
+export(validate_integration)
 export(validate_pairs)
 export(validate_reps)
 importFrom(magrittr,"%>%")
