init shiny app testing; move single-cell page to R/
Former-commit-id: 376f8ca5bf55eeafd8e1f1d534ecc2be22fa5021
Former-commit-id: d2e016cffb7dc993cb496e09c7b4e594d3e5354d
Former-commit-id: f697428c7c85956640756e438547a79a3c89fa41

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,11 @@ inst/extdata/l1000_es.rds
 # ensdb annotation
 inst/EnsDb
 
+# test stuff for app
+inst/app/tests/**/*.png
+inst/app/tests/*-current/*
+inst/app/tests/data/test/*
+
 # txp2gene for alevin
 data-raw/single-cell/alevin-args/*.gz
 data-raw/single-cell/kallisto-args/*
