--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,8 @@ export(run_kallisto_scseq)
 export(run_umap)
 export(save_combined_scseq_reports)
 export(save_scseq_reports)
+export(scPage)
+export(scPageUI)
 export(scale_fill_names)
 export(scseq_part_path)
 export(select_contrast)
