--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(explore_scseq_clusters)
 export(geom_hist_whitelist)
 export(geom_tsne)
 export(get_10x_whitepath)
+export(get_cluster_choices)
+export(get_contrast_choices)
 export(get_cors_html)
 export(get_diverge)
 export(get_dprimes)
@@ -42,6 +44,7 @@ export(get_top)
 export(get_tx2gene)
 export(get_wikipedia)
 export(hist_scseq_whitelist)
+export(id_from_tab)
 export(identify_sc_files)
 export(import_quants)
 export(integrate_saved_scseqs)
@@ -69,9 +72,8 @@ export(run_kallisto_bulk)
 export(run_kallisto_scseq)
 export(run_umap)
 export(save_combined_scseq_reports)
+export(save_scseq_data)
 export(save_scseq_reports)
-export(scPage)
-export(scPageUI)
 export(scale_fill_names)
 export(scseq_part_path)
 export(select_contrast)
