fix roxygen2 and build warnings
Former-commit-id: ec8c61be4ffaf759682251abc8aae21bc0a22d30
Former-commit-id: f269e9f4c50a127e8c394c846e3b4b5aaccb7aab
Former-commit-id: 8d21f6302cc8ba13ee376dfa0349c6b832c3edac

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(add_scseq_qc_metrics)
 export(add_table_html)
 export(append_annot)
 export(append_pdata)
-export(as.SingleCellExperiment)
 export(build_ensdb)
 export(build_kallisto_index)
 export(calcx)
@@ -22,6 +21,7 @@ export(dl_drug_es)
 export(exist_clusters)
 export(explore_results)
 export(explore_scseq_clusters)
+export(format_sample_gene_plot)
 export(geom_hist_whitelist)
 export(geom_tsne)
 export(get_10x_whitepath)
