add ui to select query signature for #90
also moved single cell part of app into R/ as working on Drugs tab


Former-commit-id: 46a665af5452281f93f3839ded491d935dfb9beb
Former-commit-id: 99e2de723191b12756603c9ca4e0738a7f3bd3ad
Former-commit-id: 2e55300d8e00c137319e4362d8c34932485cd530

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,13 @@ export(append_annot)
 export(append_pdata)
 export(build_ensdb)
 export(build_kallisto_index)
+export(bulkPageUI)
 export(calcx)
 export(check_gras)
+export(clusterComparison)
+export(clusterComparisonInput)
+export(comparisonType)
+export(comparisonTypeToggle)
 export(construct_eset)
 export(destructure_title)
 export(detect_paired)
@@ -49,6 +54,8 @@ export(identify_sc_files)
 export(import_quants)
 export(integrate_saved_scseqs)
 export(integrate_scseqs)
+export(integrationForm)
+export(integrationFormInput)
 export(jitter_umap)
 export(limit_cells)
 export(load_scseq)
@@ -57,9 +64,12 @@ export(load_scseq_qcgenes)
 export(load_seq)
 export(match_pdata)
 export(merge_linkouts)
+export(navbarUI)
 export(norm_scseq)
 export(pick_roryk_cutoff)
 export(plotMDS)
+export(plotStyles)
+export(plotStylesButton)
 export(plot_biogps)
 export(plot_combined_scseq_report)
 export(plot_scseq_barplot)
@@ -71,14 +81,32 @@ export(query_drugs)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
 export(run_umap)
+export(sampleComparison)
+export(sampleComparisonInput)
 export(save_combined_scseq_reports)
 export(save_scseq_data)
 export(save_scseq_reports)
+export(scBioGpsPlot)
+export(scBioGpsPlotOutput)
+export(scClusterPlot)
+export(scClusterPlotOutput)
+export(scForm)
+export(scFormInput)
+export(scMarkerPlot)
+export(scMarkerPlotOutput)
+export(scPage)
+export(scPageUI)
 export(scale_fill_names)
 export(scseq_part_path)
 export(select_contrast)
 export(select_pairs)
+export(selectedAnal)
+export(selectedAnalInput)
+export(selectedGene)
+export(selectedGeneInput)
 export(setup_fdata)
+export(showIntegration)
+export(showIntegrationButton)
 export(srt_to_sce)
 export(stabilize_scseq)
 export(strain_scseq)
