move Drugs tab modules into R/ while working on Datasets tab
Former-commit-id: b96b394a59acd5a680e1530d035fbd35ca6a624b
Former-commit-id: 75cb9dd61a8d36c062912a211e4d7a7f28c47632
Former-commit-id: c4dffac95771b020ecb077857e5fde944ce1d932

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(add_norms)
 export(add_scseq_clusters)
 export(add_scseq_qc_metrics)
 export(add_table_html)
+export(advancedOptions)
+export(advancedOptionsInput)
 export(append_annot)
 export(append_pdata)
 export(build_ensdb)
@@ -23,6 +25,12 @@ export(detect_paired)
 export(diff_expr)
 export(dl_10x_whitelists)
 export(dl_drug_es)
+export(drugsForm)
+export(drugsFormInput)
+export(drugsPage)
+export(drugsPageUI)
+export(drugsTable)
+export(drugsTableOutput)
 export(exist_clusters)
 export(explore_results)
 export(explore_scseq_clusters)
@@ -77,6 +85,7 @@ export(plot_scseq_report)
 export(plot_umap_cluster)
 export(plot_umap_gene)
 export(preprocess_scseq)
+export(querySignatureInput)
 export(query_drugs)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
@@ -102,6 +111,8 @@ export(select_contrast)
 export(select_pairs)
 export(selectedAnal)
 export(selectedAnalInput)
+export(selectedDrugStudy)
+export(selectedDrugStudyInput)
 export(selectedGene)
 export(selectedGeneInput)
 export(setup_fdata)
@@ -112,6 +123,7 @@ export(stabilize_scseq)
 export(strain_scseq)
 export(study_table)
 export(summarize_compound)
+export(tabPane)
 export(theme_dimgray)
 export(theme_no_xaxis)
 export(theme_no_yaxis)
