--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,31 +11,33 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 SystemRequirements:
-  salmon (0.13.1)
+  kallisto (0.46.0)
 Imports:
-    AnnotationHub (>= 2.14.5),
-    curl (>= 3.3),
     dplyr (>= 0.7.8),
     tximport (>= 1.12.0),
     edgeR (>= 3.24.3),
-    factoextra (>= 1.0.5),
     ggplot2 (>= 3.1.0),
-    AnnotationDbi (>= 1.44.0),
-    ensembldb (>= 2.6.8),
     Biobase (>= 2.42.0),
+    limma (>= 3.40.2),
     shiny (>= 1.2.0),
     shinyjs (>= 1.0),
     shinyWidgets (>= 0.4.8),
+    shinyFiles (>= 0.7.3),
     scran (>= 1.12.0),
     scater (>= 1.12.2),
+    Seurat (>= 3.0.1),
     magrittr (>= 1.5),
-    MASS (>= 7.3.51.1),
     miniUI (>= 0.1.1.1),
-    plotly (>= 4.8.0),
     DT (>= 0.5),
     tibble (>= 2.0.1)
 Suggests: 
-    testthat
+    testthat,
+    curl (>= 3.3),
+    AnnotationDbi (>= 1.44.0),
+    ensembldb (>= 2.8.0),
+    factoextra (>= 1.0.5),
+    MASS (>= 7.3.51.1),
+    plotly (>= 4.8.0)
 Depends: 
     data.table (>= 1.12.0),
     shinyBS(>= 0.61)
