--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(add_table_html)
 export(advancedOptions)
 export(advancedOptionsInput)
 export(append_annot)
-export(append_pdata)
 export(build_ensdb)
 export(build_kallisto_index)
 export(bulkPageUI)
@@ -19,7 +18,6 @@ export(clusterComparisonInput)
 export(comparisonType)
 export(comparisonTypeToggle)
 export(construct_eset)
-export(destructure_title)
 export(detect_paired)
 export(diff_expr)
 export(dl_10x_whitelists)
@@ -31,8 +29,6 @@ export(drugsPageUI)
 export(drugsTable)
 export(drugsTableOutput)
 export(exist_clusters)
-export(explore_results)
-export(explore_scseq_clusters)
 export(format_sample_gene_plot)
 export(geom_hist_whitelist)
 export(geom_tsne)
@@ -43,6 +39,7 @@ export(get_cors_html)
 export(get_diverge)
 export(get_dprimes)
 export(get_drugbank)
+export(get_drugs_table)
 export(get_ensdb_package)
 export(get_fastq_id1s)
 export(get_knee)
@@ -85,6 +82,7 @@ export(plot_umap_gene)
 export(preprocess_scseq)
 export(querySignatureInput)
 export(query_drugs)
+export(run_drugseqr)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
 export(run_umap)
@@ -119,7 +117,6 @@ export(showIntegrationButton)
 export(srt_to_sce)
 export(stabilize_scseq)
 export(strain_scseq)
-export(study_table)
 export(summarize_compound)
 export(tabPane)
 export(theme_dimgray)
