--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,12 +22,28 @@ export(detect_paired)
 export(diff_expr)
 export(dl_10x_whitelists)
 export(dl_drug_es)
+export(dropdownMenuButton)
 export(drugsForm)
 export(drugsFormInput)
 export(drugsPage)
 export(drugsPageUI)
 export(drugsTable)
 export(drugsTableOutput)
+export(dsAnalTable)
+export(dsDataset)
+export(dsDatasetInput)
+export(dsEndType)
+export(dsEndTypeInput)
+export(dsForm)
+export(dsFormAnal)
+export(dsFormAnalInput)
+export(dsFormInput)
+export(dsFormQuant)
+export(dsFormQuantInput)
+export(dsPage)
+export(dsPageUI)
+export(dsQuantTable)
+export(dsTable)
 export(exist_clusters)
 export(format_sample_gene_plot)
 export(geom_hist_whitelist)
@@ -61,7 +77,10 @@ export(integrate_scseqs)
 export(integrationForm)
 export(integrationFormInput)
 export(jitter_umap)
+export(justifiedButtonGroup)
 export(limit_cells)
+export(load_bulk_anals)
+export(load_bulk_datasets)
 export(load_scseq)
 export(load_scseq_counts)
 export(load_scseq_qcgenes)
@@ -80,6 +99,7 @@ export(plot_scseq_report)
 export(plot_umap_cluster)
 export(plot_umap_gene)
 export(preprocess_scseq)
+export(querySignature)
 export(querySignatureInput)
 export(query_drugs)
 export(run_drugseqr)
@@ -88,6 +108,8 @@ export(run_kallisto_scseq)
 export(run_umap)
 export(sampleComparison)
 export(sampleComparisonInput)
+export(save_bulk_anals)
+export(save_bulk_dataset)
 export(save_combined_scseq_reports)
 export(save_scseq_data)
 export(save_scseq_reports)
@@ -111,6 +133,8 @@ export(selectedDrugStudy)
 export(selectedDrugStudyInput)
 export(selectedGene)
 export(selectedGeneInput)
+export(selectizeInputWithButtons)
+export(selectizeInputWithValidation)
 export(setup_fdata)
 export(showIntegration)
 export(showIntegrationButton)
@@ -119,6 +143,8 @@ export(stabilize_scseq)
 export(strain_scseq)
 export(summarize_compound)
 export(tabPane)
+export(textInputWithButtons)
+export(textInputWithValidation)
 export(theme_dimgray)
 export(theme_no_xaxis)
 export(theme_no_yaxis)
@@ -126,5 +152,6 @@ export(transfer_labels)
 export(tsne_scseq_whitelist)
 export(validate_integration)
 export(validate_pairs)
+export(validate_pdata)
 export(validate_reps)
 importFrom(magrittr,"%>%")
