minor fixes for cell type #94
Former-commit-id: 690c04ef95e721c5903d7626930d48a03ae981f1
Former-commit-id: fff03e16ed67d68b9600b56ccc7bd5caaa9aac06
Former-commit-id: 4adbdb656fc4f1c33ca9ee16ed41e30ff4692cd6

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(format_sample_gene_plot)
 export(geom_hist_whitelist)
 export(geom_tsne)
 export(get_10x_whitepath)
+export(get_cell_choices)
 export(get_cluster_choices)
 export(get_contrast_choices)
 export(get_cors_html)
