--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .Rhistory
 
 # contains raw IBD FASTQ files for dev purposes
-data-raw/example-data/*
+data-raw/patient_data/*
 data-raw/single-cell/example-data/*
 data-raw/indices*
 !generate_examples.R
