init running PADOG for RNA-Seq; closes #98
Former-commit-id: 000bc537fa560c1b2db25bd8bd2f4bf3192cc376
Former-commit-id: 07e07d7738f3dba6cca760b7bb258cb90eab2477
Former-commit-id: a0164fc459845c0ce75cdd2d5957b5df40ba80d7

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(comparisonTypeToggle)
 export(construct_eset)
 export(detect_paired)
 export(diff_expr)
+export(diff_path)
 export(dl_10x_whitelists)
 export(dl_drug_es)
 export(dropdownMenuButton)
