--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     magrittr (>= 1.5),
     miniUI (>= 0.1.1.1),
     DT (>= 0.5),
-    tibble (>= 2.0.1)
+    tibble (>= 2.0.1),
+    PADOG
 Suggests: 
     testthat,
     curl (>= 3.3),
@@ -39,5 +40,7 @@ Suggests:
     MASS (>= 7.3.51.1),
     plotly (>= 4.8.0)
 Depends: 
+    R (>= 3.6.0),
     data.table (>= 1.12.0),
     shinyBS(>= 0.61)
+Remotes: alexvpickering/PADOG
