move Pathways tab to R/ and document
Former-commit-id: b1c215f4b8ca851c08ee0b46653c67fe3a6980a1
Former-commit-id: c44992a1dda4d678af19c88cb3ee1b52ba4a1acb
Former-commit-id: eadbd951e994773472fbdc6c8c21c0317a057c74

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,9 @@ export(comparisonTypeToggle)
 export(construct_eset)
 export(detect_paired)
 export(diff_expr)
+export(diff_expr_scseq)
 export(diff_path)
+export(diff_path_scseq)
 export(dl_10x_whitelists)
 export(dl_drug_es)
 export(dropdownMenuButton)
@@ -46,10 +48,12 @@ export(dsPageUI)
 export(dsQuantTable)
 export(dsTable)
 export(exist_clusters)
+export(fit_ebayes_scseq)
 export(format_sample_gene_plot)
 export(geom_hist_whitelist)
 export(geom_tsne)
 export(get_10x_whitepath)
+export(get_ambient)
 export(get_cell_choices)
 export(get_cluster_choices)
 export(get_contrast_choices)
@@ -64,6 +68,8 @@ export(get_knee)
 export(get_open_a)
 export(get_outliers)
 export(get_palette)
+export(get_path_df)
+export(get_path_directions)
 export(get_pct_ambient)
 export(get_scseq_markers)
 export(get_scseq_whitelist)
@@ -84,12 +90,17 @@ export(limit_cells)
 export(load_bulk_anals)
 export(load_bulk_datasets)
 export(load_scseq)
+export(load_scseq_anals)
 export(load_scseq_counts)
 export(load_scseq_qcgenes)
 export(load_seq)
 export(merge_linkouts)
 export(navbarUI)
 export(norm_scseq)
+export(pathForm)
+export(pathFormInput)
+export(pathPage)
+export(pathPageUI)
 export(pick_roryk_cutoff)
 export(plotMDS)
 export(plotStyles)
@@ -125,6 +136,8 @@ export(scMarkerPlot)
 export(scMarkerPlotOutput)
 export(scPage)
 export(scPageUI)
+export(scPathClusters)
+export(scPathClustersInput)
 export(scale_fill_names)
 export(scseq_part_path)
 export(select_contrast)
@@ -150,6 +163,7 @@ export(textInputWithValidation)
 export(theme_dimgray)
 export(theme_no_xaxis)
 export(theme_no_yaxis)
+export(toggleAll)
 export(transfer_labels)
 export(tsne_scseq_whitelist)
 export(validate_integration)
