--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Imports:
     scater (>= 1.12.2),
     Seurat (>= 3.0.1),
     magrittr (>= 1.5),
+    metaMA (>= 3.1.2),
     miniUI (>= 0.1.1.1),
     DT (>= 0.5),
     tibble (>= 2.0.1),
