documentation and move to R/ for #106
Former-commit-id: 7ba845b1448a0eb1123ed7a460a8fe2fffc648a0
Former-commit-id: fcaeaebf0643c879c9e6e0e50a0c9a6691e87959
Former-commit-id: a578a1eabf15484c24f520112bb5ac40d89a844c

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(clusterComparisonInput)
 export(comparisonType)
 export(comparisonTypeToggle)
 export(construct_eset)
+export(construct_path_df)
 export(detect_paired)
 export(diff_expr)
 export(diff_expr_scseq)
@@ -53,6 +54,7 @@ export(format_sample_gene_plot)
 export(geom_hist_whitelist)
 export(geom_tsne)
 export(get_10x_whitepath)
+export(get_all_df)
 export(get_ambient)
 export(get_cell_choices)
 export(get_cluster_choices)
