implement download csv for single cell data #107 also fixed bug where top genes were missing in Pathways tab for single cell analyses
Former-commit-id: 250a8bb1c4ec0657cf84ab38d4abc543745e229f
Former-commit-id: 371dc7cfb55bd2a565661e38b6da9915991e241e
Former-commit-id: 51cd0f609af6c4d88ebb54eb07f6e7212e256112

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,10 @@ export(add_scseq_qc_metrics)
 export(add_table_html)
 export(advancedOptions)
 export(advancedOptionsInput)
+export(ambient.omit)
 export(append_annot)
 export(build_ensdb)
 export(build_kallisto_index)
-export(bulkPageUI)
 export(calcx)
 export(check_gras)
 export(clusterComparison)
@@ -57,6 +57,7 @@ export(get_10x_whitepath)
 export(get_all_df)
 export(get_ambient)
 export(get_cell_choices)
+export(get_cell_pcts)
 export(get_cluster_choices)
 export(get_contrast_choices)
 export(get_cors_html)
@@ -140,6 +141,7 @@ export(scPage)
 export(scPageUI)
 export(scPathClusters)
 export(scPathClustersInput)
+export(sc_dl_filename)
 export(scale_fill_names)
 export(scseq_part_path)
 export(select_contrast)
