--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,9 +92,10 @@ export(justifiedButtonGroup)
 export(limit_cells)
 export(load_bulk_anals)
 export(load_bulk_datasets)
+export(load_cell_ranger_counts)
+export(load_kallisto_counts)
 export(load_scseq)
 export(load_scseq_anals)
-export(load_scseq_counts)
 export(load_scseq_qcgenes)
 export(load_seq)
 export(merge_linkouts)
