init pseudo bulk differential expression
also:
 - implement selecting specific clusters for integration
 - show cell percentages in gene selection

closes #109


Former-commit-id: cdb14129cd616c4b0815b74867e4e6624d3e4ea0
Former-commit-id: 660d38a47652a8622aa4de2e77876e6eb147c9ac
Former-commit-id: d3d6bb73a2e0ed0af1062d9c8f3fbbb0b680e850

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(add_es)
 export(add_linkout)
+export(add_project_scseqs)
 export(add_scseq_clusters)
 export(add_scseq_qc_metrics)
 export(add_table_html)
@@ -26,6 +27,7 @@ export(diff_path)
 export(diff_path_scseq)
 export(dl_10x_whitelists)
 export(dl_drug_es)
+export(downsample_scseq)
 export(dropdownMenuButton)
 export(drugsForm)
 export(drugsFormInput)
@@ -67,6 +69,7 @@ export(get_drugbank)
 export(get_drugs_table)
 export(get_ensdb_package)
 export(get_fastq_id1s)
+export(get_include_choices)
 export(get_knee)
 export(get_open_a)
 export(get_outliers)
@@ -97,6 +100,7 @@ export(load_kallisto_counts)
 export(load_scseq)
 export(load_scseq_anals)
 export(load_scseq_qcgenes)
+export(load_scseqs_for_integration)
 export(load_seq)
 export(merge_linkouts)
 export(navbarUI)
