--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(append_annot)
 export(build_ensdb)
 export(build_kallisto_index)
 export(calcx)
+export(cca_integrate)
 export(check_gras)
 export(clusterComparison)
 export(clusterComparisonInput)
@@ -69,7 +70,9 @@ export(get_drugbank)
 export(get_drugs_table)
 export(get_ensdb_package)
 export(get_fastq_id1s)
+export(get_gene_choices)
 export(get_include_choices)
+export(get_integrated_ambient)
 export(get_knee)
 export(get_open_a)
 export(get_outliers)
@@ -77,6 +80,7 @@ export(get_palette)
 export(get_path_df)
 export(get_path_directions)
 export(get_pct_ambient)
+export(get_scseq_assay)
 export(get_scseq_markers)
 export(get_scseq_whitelist)
 export(get_top)
@@ -144,10 +148,10 @@ export(scMarkerPlot)
 export(scMarkerPlotOutput)
 export(scPage)
 export(scPageUI)
-export(scPathClusters)
-export(scPathClustersInput)
 export(sc_dl_filename)
 export(scale_fill_names)
+export(scalign_integrate)
+export(scalign_to_scseq)
 export(scseq_part_path)
 export(select_contrast)
 export(select_pairs)
@@ -157,6 +161,7 @@ export(selectedDrugStudy)
 export(selectedDrugStudyInput)
 export(selectedGene)
 export(selectedGeneInput)
+export(selectizeInputMultWithButton)
 export(selectizeInputWithButtons)
 export(selectizeInputWithValidation)
 export(setup_fdata)
@@ -179,4 +184,5 @@ export(validate_integration)
 export(validate_pairs)
 export(validate_pdata)
 export(validate_reps)
+importFrom(SingleCellExperiment,colData)
 importFrom(magrittr,"%>%")
